--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    
     "server": "json-server -p3001 db.json"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
