--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "eject": "react-scripts eject",
     
     "server": "json-server -p3001 db.json"
-  }
-  
+  },
+  "proxy": "http://localhost:3001"
 }
