--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "json-server": "^0.14.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -14,7 +15,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    
     "server": "json-server -p3001 db.json"
   },
   "proxy": "http://localhost:3001"
